-- V1 - Schema initial
-- Conforme a docs/diagrammes/D2-modele-donnees.puml : toute difference est un defaut.
-- SQL compatible PostgreSQL et H2 en mode PostgreSQL (identite, horodatages avec fuseau).

CREATE TABLE promotion (
    id  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom VARCHAR(100) NOT NULL UNIQUE
);

CREATE TABLE etudiant (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom          VARCHAR(150) NOT NULL,
    promotion_id BIGINT       NOT NULL,
    CONSTRAINT fk_etudiant_promotion FOREIGN KEY (promotion_id) REFERENCES promotion (id)
);

CREATE TABLE session_cours (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    titre         VARCHAR(200) NOT NULL,
    promotion_id  BIGINT       NOT NULL,
    code          VARCHAR(6)   NOT NULL UNIQUE, -- RG22 : code a 6 caracteres, unique parmi les sessions
    ouverture_at  TIMESTAMP WITH TIME ZONE NOT NULL,
    expiration_at TIMESTAMP WITH TIME ZONE NOT NULL, -- RG1 : ouverture_at + 15 min
    cloturee_at   TIMESTAMP WITH TIME ZONE,          -- RG19 : NULL tant que la session est ouverte
    CONSTRAINT fk_session_promotion FOREIGN KEY (promotion_id) REFERENCES promotion (id)
);

CREATE TABLE presence (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    session_id  BIGINT      NOT NULL,
    etudiant_id BIGINT      NOT NULL,
    source      VARCHAR(10) NOT NULL,
    marquee_at  TIMESTAMP WITH TIME ZONE NOT NULL,
    CONSTRAINT ck_presence_source CHECK (source IN ('ETUDIANT', 'FORMATEUR')), -- RG5
    CONSTRAINT uq_presence_session_etudiant UNIQUE (session_id, etudiant_id),  -- RG3
    CONSTRAINT fk_presence_session  FOREIGN KEY (session_id)  REFERENCES session_cours (id),
    CONSTRAINT fk_presence_etudiant FOREIGN KEY (etudiant_id) REFERENCES etudiant (id)
);

CREATE TABLE exercice (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    session_id  BIGINT       NOT NULL,
    etudiant_id BIGINT       NOT NULL, -- auteur
    lien        VARCHAR(2048) NOT NULL, -- RG7
    statut      VARCHAR(25)  NOT NULL,
    depose_at   TIMESTAMP WITH TIME ZONE NOT NULL,
    modifie_at  TIMESTAMP WITH TIME ZONE, -- RG9 : date du dernier remplacement de lien
    CONSTRAINT ck_exercice_statut CHECK (statut IN ('DEPOSE', 'EN_ATTENTE_RELECTURE', 'RELU')), -- RG20
    CONSTRAINT uq_exercice_session_etudiant UNIQUE (session_id, etudiant_id), -- RG6
    CONSTRAINT fk_exercice_session  FOREIGN KEY (session_id)  REFERENCES session_cours (id),
    CONSTRAINT fk_exercice_etudiant FOREIGN KEY (etudiant_id) REFERENCES etudiant (id)
);

CREATE TABLE relecture (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    exercice_id  BIGINT     NOT NULL UNIQUE, -- RG10 : exactement un relecteur par exercice
    relecteur_id BIGINT     NOT NULL,        -- un etudiant, jamais une table separee (RG11, RG12)
    note         SMALLINT,                   -- RG13 : entier 0..20, NULL tant que non rendue
    commentaire  TEXT,                       -- NULL tant que non rendue
    affectee_at  TIMESTAMP WITH TIME ZONE NOT NULL,
    rendue_at    TIMESTAMP WITH TIME ZONE,   -- RG14 : NULL tant que la relecture n'est pas rendue
    CONSTRAINT ck_relecture_note CHECK (note IS NULL OR (note BETWEEN 0 AND 20)),
    CONSTRAINT fk_relecture_exercice  FOREIGN KEY (exercice_id)  REFERENCES exercice (id),
    CONSTRAINT fk_relecture_relecteur FOREIGN KEY (relecteur_id) REFERENCES etudiant (id)
);

CREATE TABLE tentative_code (
    etudiant_id        BIGINT PRIMARY KEY,
    echecs_consecutifs INTEGER NOT NULL DEFAULT 0, -- RG4 : cinq codes inconnus consecutifs
    bloque_jusqu_a     TIMESTAMP WITH TIME ZONE,   -- RG4 : NULL si l'etudiant n'est pas bloque
    CONSTRAINT fk_tentative_etudiant FOREIGN KEY (etudiant_id) REFERENCES etudiant (id)
);
